hphp/hack/test/typecheck/inout/bad_inout_decl_byref2.php.exp
File "bad_inout_decl_byref2.php", line 3, characters 45-45:
Encountered unexpected token '&'. (Parsing[1002])
